templates + rss parse implementation wip

--- a/views/about.haml
+++ b/views/about.haml
@@ -1,8 +1,11 @@
-%p.intro My name is Maurizio Mangione, I'm working as a software engineer at Jobrapido.
+%p.intro
+  My name is Maurizio Mangione, I'm a software engineer.
 %section#main.grid.grid-pad
   .col-1-2
-    %h2.internal About me
-    %h3 head
+    %h2.internal
+      About me
+    %h3
+      head
     %p
       I've always been fascinated by computers: my very first love was a Commodore 64. I wasn't really a Basic
       programmer badass but, who cares, I had a lot of fun with it.
@@ -35,7 +38,8 @@
     %p
       If you want to learn more about my professional profile, please visit my
       %a(href="http://www.linkedin.com/in/granze") Linkedin page
-    %h3 body
+    %h3
+      body
     %p
       When I'm not writing code, I dedicate my time to my other great passion: rock climbing.
       %br
