--- a/views/layout.haml
+++ b/views/layout.haml
@@ -14,27 +14,38 @@
   %body
     %header#main-header.shadow-top
       %nav.wrapper
-        %a#about(href="/about") about
+        %a#about(href="/about")
+          about
       %h1.wrapper
-        %a(href="/") Granze
+        %a(href="/")
+          Granze
 
     =yield
 
     %footer
       .wrapper
         .contacts
-          %a(href="https://github.com/Granze") &#xe001;
-          %a(href="http://www.linkedin.com/in/granze") &#xe004;
-          %a(href="http://vimeo.com/granze") &#xe000;
-          %a(href="https://twitter.com/#!/granze") &#xe005;
-          %a(href="http://last.fm/user/granzebru") &#xe003;
-          %a(href="https://plus.google.com/u/0/104973120103840514441") &#xe006;
+          %a(href="https://github.com/Granze")
+            &#xe001;
+          %a(href="http://www.linkedin.com/in/granze")
+            &#xe004;
+          %a(href="http://vimeo.com/granze")
+            &#xe000;
+          %a(href="https://twitter.com/#!/granze")
+            &#xe005;
+          %a(href="http://last.fm/user/granzebru")
+            &#xe003;
+          %a(href="https://plus.google.com/u/0/104973120103840514441")
+            &#xe006;
         %p.credits
           Granze.net is powered by:
-          %a(href="http://www.sinatrarb.com/") Sinatra
+          %a(href="http://www.sinatrarb.com/")
+            Sinatra
           and
-          %a(href="http://haml.info/") Haml
+          %a(href="http://haml.info/")
+            Haml
           %br
           Source code on
-          %a(href="https://github.com/Granze/granze.net-ruby") Github
+          %a(href="https://github.com/Granze/granze.net-ruby")
+            Github
 
